# txt-cli

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/txtcli/: __init__.py  gui.py  main.py  model.py  util.py
