[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "txtcli"
authors = [{name = "ahui", email = "102419@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
  "arrow",
  "click",
  "appdirs",
  "pyperclip",
]
requires-python = ">=3.9"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/ahui2016/txt-cli"

[project.scripts]
txt = "txtcli.main:cli"
